Version 0.4.0 (2014-05-xx)
--------------------------
Added callbacks for flushing (#78)
Added Python-logging (#76)
Added Redis and gevent based async approach (#75)
Added thread-based AsyncBufferedConsumer (#74)
Improved test coverage up to 50% (#73)
Added ability to specify port for collector (#72) (TODO)
Added POST support to tracker (#70)
Added Redis-based queue (#45)
Added Buffered Consumer (#44)
Changed user_id to be set on a per-event basis (#39)
Removed type hint suffixes from unstructured events (#36)

Version 0.3.0 (2014-04-25)
--------------------------
Added custom context vendor configuration option (#67)
Changed the return value of the tracking methods to a tuple (#65)
Added coveralls code coverage button (#64)
Added currency parameter to ecommerce tracking methods (#62)
Added config option to disable contracts (#61)
Added event_vendor as argument to track_unstruct_event (#54)
Added classifiers to setup.py (#48)
Added support for custom context to all track() methods (#38)
Updated Tracker constructor to use map of optional args (#37)
Updated so a transaction and its items have the same txnid and dtm (#25)
Added support for Python 3.2 (#41)

Version 0.2.0 (2014-04-15)
--------------------------
Fixed Pycontracts dependency (#63)
Made unrequired tracker method arguments optional (#40)
Linked the Technical Docs and Setup Guide images to the appropriate pages (#60)
Changed API to no longer specify a collector URL option (#57) 
Removed the "URL from Cloudfront subdomain" option (#56)
Started sending event vendor parameter through on querystring (#55)
Changed track screen view to use an unstructured event (#53)
Added ability to name individual instances of the Python Tracker (#52)
Validated GET payload in all integration tests (#33)
Added support for Python 2.7 (#42)
Fixed versions in requirements.txt (#47)
Added platform and tracker version to payload (#50)
Changed tracker version prefix from "python-" to "py-" (#51)

Version 0.1.0 (2014-03-28)